--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Hostels of University of Peradeniya</title>
+  <title>Halls of Residence of University of Peradeniya</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Leaflet CSS -->
@@ -71,7 +71,7 @@
 </head>
 <body>
 
-  <div id="title-bar">Hostels of University of Peradeniya</div>
+  <div id="title-bar">Halls of Residence of University of Peradeniya</div>
 
   <div id="sidebar">
     <h3>Select Your Hostel</h3>
@@ -189,3 +189,4 @@
   </script>
 </body>
 </html>
+
